# mandrake

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE_SCE  NOTICE  README.md  compile_cpu.sh  compile_gpu.sh  environment.yml  mandrake-runner.py  pathoSCE-runner.py  readthedocs.yml  setup.py  wssne_stoc_gpu.m  wtsne_cpu.cpp
.github/workflows/: python-package-conda.yml
boost/: extract
docs/: animation.rst  citing.rst  conf.py  examples.rst  index.rst  input.rst  installation.rst  misc.rst  parallelisation.rst  parameters.rst  plots.rst  requirements.txt  setup.py  web.rst
mandrake/: __init__.py  __main__.py  batch.py  clustering.py  dists.py  pairsnp.py  plot.py  sce.py  sketchlib.py  sound.py  utils.py
pathoSCE/: __init__.py  __main__.py  clustering.py  dists.py  pairsnp.py  plot.py  sce.py  sketchlib.py  utils.py
src/: Makefile  animate.hpp  containers.cuh  cuda_call.cuh  cuda_launch.cuh  kseq.h  pairsnp.hpp  progress.hpp  python_bindings.cpp  rng.hpp  sce_results.hpp  sound.hpp  uniform_discrete.hpp  vector_norm.hpp  wtsne.hpp  wtsne_cpu.cpp  wtsne_gpu.cu
test/: animation.embedding.dot  animation.embedding.html  animation.embedding.txt  animation.embedding_hdbscan_clusters.csv  mandrake.embedding.dot  mandrake.embedding.html  mandrake.embedding.txt  mandrake.embedding_hdbscan_clusters.csv  mandrake.names.txt  run_test.py
test/data/: gene_presence_absence.Rtab.bz2  labels.txt  sub5k_hiv_refs_prrt_trim.fas.bz2  weights.txt
tests/: test_utils.py
tests/data/: names.txt  rfiles.txt
